--- a/Projects/Zmey/Zmey.vcxproj
+++ b/Projects/Zmey/Zmey.vcxproj
@@ -65,7 +65,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\libx64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;d3d12.lib;dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <AdditionalOptions>/WHOLEARCHIVE:ScriptingGlue.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -94,7 +94,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)ThirdParty\libx64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;assimp-vc140-mt.lib;ChakraCore.lib;d3d12.lib;dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TreatLinkerWarningAsErrors>true</TreatLinkerWarningAsErrors>
       <AdditionalOptions>/WHOLEARCHIVE:ScriptingGlue.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -117,10 +117,26 @@
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Backend.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\BackendDeclarations.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Backend\CommandList.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanCommandList.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanHelpers.h" />
-    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanShaders.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Backend.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12CommandList.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Helpers.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Dx12\Dx12Shaders.h" />
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanBackend.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanCommandList.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanHelpers.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Zmey\Graphics\Backend\Vulkan\VulkanShaders.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="..\..\include\Zmey\Graphics\Features.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Features\MeshRenderer.h" />
     <ClInclude Include="..\..\include\Zmey\Graphics\Features\RectRenderer.h" />
@@ -157,9 +173,20 @@
     <ClCompile Include="..\..\Source\Components\TransformManager.cpp" />
     <ClCompile Include="..\..\Source\EngineLoop.cpp" />
     <ClCompile Include="..\..\Source\EntityManager.cpp" />
-    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanBackend.cpp" />
-    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanCommandList.cpp" />
-    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanShaders.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12Backend.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Backend\Dx12\Dx12CommandList.cpp" />
+    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanBackend.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanCommandList.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Graphics\Backend\Vulkan\VulkanShaders.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Graphics\Features\MeshRenderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Features\RectRenderer.cpp" />
     <ClCompile Include="..\..\Source\Graphics\Renderer.cpp" />
