The idl compiler now outputs its entire output in a single .cpp.

--- a/Projects/ScriptingGlue/ScriptingGlue.vcxproj.filters
+++ b/Projects/ScriptingGlue/ScriptingGlue.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Source\Scripting\ScriptingGlue\Math.cpp">
+    <ClCompile Include="..\..\Source\Scripting\ScriptingGlue\ScriptingGlue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
