--- a/Projects/Zmey/Zmey.vcxproj.filters
+++ b/Projects/Zmey/Zmey.vcxproj.filters
@@ -242,7 +242,7 @@
     <ClInclude Include="..\..\include\Zmey\Platform\InputController.h">
       <Filter>include\Platform</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Zmey\SettingsSerializer.h">
+    <ClInclude Include="..\..\include\Zmey\SettingsManager.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -319,7 +319,7 @@
     <ClCompile Include="..\..\Source\Graphics\Managers\BufferManager.cpp">
       <Filter>Source\Graphics\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Source\SettingsSerializer.cpp">
+    <ClCompile Include="..\..\Source\SettingsManager.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
