Changed the input config and sample script to reduce spam.

--- a/Games/GiftOfTheSanctum/zmeyconfig.ini
+++ b/Games/GiftOfTheSanctum/zmeyconfig.ini
@@ -1,4 +1,4 @@
 [InputController]
-Actions=fire,MouseX
-Actions=walk,W
-Actions=circle,SHIFT+W
+Actions=movecam,LeftStickX,MouseX
+Actions=jump,FaceDown,Space
+Actions=walk,CONT+Shift+W,CONT+DpadUp
